tests/ui/errors/snapshots/lex_unexpected_character.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unexpected character
   ╭─[test.lis:1:12]
 1 │ let x = 42 ~ invalid
   ·            ┬
   ·            ╰── not part of any token
   ╰────
  help: Remove this character · code: [lex.unexpected_char]
